finished tutor redesign to match students

--- a/app/views/welcome/tutor.html.haml
+++ b/app/views/welcome/tutor.html.haml
@@ -10,7 +10,7 @@
       #login-row.row.justify-content-center.align-items-center
         #login-column.col-md-6
           #login-box.col-md-12
-            %form#login-form.form{:action => login_tutee_path, :method => 'post'}
+            %form#login-form.form{:action => new_tutor_path, :method => 'post'}
               %h3.text-center.text-info Login
               .form-group
                 %label.text-info{:for => 'username'} Username:
@@ -19,14 +19,14 @@
                :oninput => "this.setCustomValidity('')", :oninvalid => "this.setCustomValidity('Enter berkeley email only')"}/
               .form-group
 
-                
-                / %label.text-info{:for => "password"} Password:
-                / %br/
-                / %input#password.form-control{:name => "password", :type => "text", :placeholder => 'password'}/
-                / %br/
+                -# Need to figure out how to auto generate password and other links as in students. 
+                %label.text-info{:for => "password"} Password:
+                %br/
+                %input#password.form-control{:name => "password", :type => "text", :placeholder => 'password'}/
+                %br/
 
                 %input.btn.btn-info.btn-md{:name => 'submit', :type => 'submit', :value => 'submit'}/
               .form-group
                 %br/
                 #register-link.text-right
-                  %a.text-info{:href => new_tutee_path} Register here
+                  %a.text-info{:href => new_tutor_path} Register here
