--- a/app/views/tutors/registrations/new.html.erb
+++ b/app/views/tutors/registrations/new.html.erb
@@ -41,6 +41,24 @@
 
     <div class="form-row">
       <div>
+          <h1 class="lead">Password</h1>
+      </div>
+
+      <div>
+        <div class="form-group">
+            <%= form.label :pasword, 'Password (6 char. minimum)', class:'required'%><br>
+            <%= form.password_field :password, autocomplete: "new-password", class: 'form-control', :required => true, :minlength => 6, :oninput => "this.setCustomValidity('')", :oninvalid => "this.setCustomValidity('Password must be at least 6 characters')"%>
+        </div>  
+
+        <div class="form-group">
+          <%= form.label :password_confirmation, 'Confirm Password', class:'required'%><br>
+          <%= form.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', :required => true, :oninput => "this.setCustomValidity('')", :oninvalid => "this.setCustomValidity('Password must be at least 6 characters')"%>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-row">
+      <div>
           <h1 class="lead">Demographic <br/> Info</h1>
       </div>
       <div> 
@@ -100,7 +118,7 @@
     </div>
 
     <div style="width: 100%;">
-        <%= link_to 'Back', welcome_tutor_path, class: 'btn btn-secondary text-light'%>
+        <%= link_to 'Back', new_tutor_session_path, class: 'btn btn-secondary text-light'%>
         <button type="submit" class="btn btn-success float-right">Create New Tutor</button>
     </div>
   </div>
