--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <%= render "notice_danger" %>
 <% end %>
 
-<%= form_for @tutor, :url => tutors_path do |form|%>
+<%= form_for @tutee, :url => tutees_path do |form|%>
   <div class="row mt-4 center-form">
 
     <div class="form-row">
@@ -27,14 +27,9 @@
           <%= form.text_field :email, class: 'form-control ', placeholder: 'eg. oski@berkeley.edu', :required => true,  pattern: "[a-zA-Z0-9._%+-]+@berkeley\.edu$", oninput: "this.setCustomValidity('')" ,oninvalid: "this.setCustomValidity('Enter berkeley email only')" %>
         </div>
 
-        <div class="form-group">
-          <%= form.label :grade_level, 'Years in School', class: 'required'%>
-          <%= form.select :grade_level, options_for_select(['1st', '2nd', '3rd', '4th', 'Other']), {:prompt=>"Select Year"}, {class: 'form-control', :required => true} %>
-        </div>
-
          <div class="form-group">
-          <%= form.label :birthday, class: 'required'%>
-          <%= form.date_field :birthday, class: 'form-control', :required => true, :placeholder => "MM/DD/YYYY" %>
+          <%= form.label :birthdate, class: 'required'%>
+          <%= form.date_field :birthdate, class: 'form-control', :required => true, :placeholder => "MM/DD/YYYY" %>
         </div>
       </div>
     </div>
@@ -46,7 +41,7 @@
 
       <div>
         <div class="form-group">
-            <%= form.label :password, 'Password (6 char. minimum)', class:'required'%><br>
+            <%= form.label :pasword, 'Password (6 char. minimum)', class:'required'%><br>
             <%= form.password_field :password, autocomplete: "new-password", class: 'form-control', :required => true, :minlength => 6, :oninput => "this.setCustomValidity('')", :oninvalid => "this.setCustomValidity('Password must be at least 6 characters')"%>
         </div>  
 
@@ -68,30 +63,48 @@
         </div>
 
         <div class="form-group">
-          <%= form.label :major %>
-          <%= form.text_field :major, class: 'form-control ', placeholder: 'eg. Computer Science'%>
-        </div> 
+          <%= form.label :pronoun, "Pronouns", class: 'required'%>
+          <%= form.select :pronoun, options_for_select(['he/his','she/her','they/their', 'Other']), {:prompt=>"Select Pronouns"}, {class: 'form-control', :required => true} %>
+        </div>
 
         <div class="form-group">
-          <%= form.label :dsp?, "Are you a DSP student?", class: 'required' %>
-          <%= form.select :dsp?,  options_for_select([true,false]), {:prompt=>"Select an Option"}, {class: 'form-control', :required => true}%>
-        </div>   
+          <%= form.label :ethnicity, class: 'required'%>
+          <%= form.select :ethnicity, options_for_select(['Asian','Black/African','Caucasian', 'Hispanic/Latinx', 'Native American', 'Pacific Islander', 'Mixed', 'Other', 'Prefer not to say']), {:prompt=>"Select Pronouns"}, {class: 'form-control', :required => true} %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :major, class: 'required' %>
+          <%= form.select :major, options_for_select(['EECS','CS','other']), {:prompt=>"Select Major"}, {class: 'form-control', :required => true}%>
+        </div> 
 
         <div class="form-group">
           <%= form.label :transfer?, "Are you a transfer student?", class: 'required' %>
           <%= form.select :transfer?,  options_for_select([true,false]), {:prompt=>"Select an Option"}, {class: 'form-control', :required => true}%>
         </div>  
+
+        <div class="form-group">
+          <%= form.label :dsp?, "Are you a DSP student?", class: 'required' %>
+          <%= form.select :dsp?,  options_for_select([true,false]), {:prompt=>"Select an Option"}, {class: 'form-control', :required => true}%>
+        </div>  
+         
       </div>   
     </div>
 
     <div class="form-row">
       <div>
-        <h1 class="lead">Tutor Info</h1>
+        <h1 class="lead">Academic Info</h1>
       </div>
       <div>
+
         <div class="form-group">
-          <%= form.label :type_of_tutor, class: 'required' %>
-          <%= form.select :type_of_tutor, options_for_select(['CSM (8-12 hours)', 'TA (12 hours)', 'Academic Intern (36 hours)', 'Tutor (12 hours)']), {:prompt=>"Select Tutor Type"}, {class: 'form-control ', :required => true} %>
+          <%= form.label :year, 'Years in School', class: 'required'%>
+          <%= form.select :year, options_for_select(['1st', '2nd', '3rd', '4th', 'Other']), {:prompt=>"Select Year"}, {class: 'form-control', :required => true} %>
+        </div>
+
+        
+        <div class="form-group">
+          <%= form.label :privilige, 'For CS Scholars only. What CS Scholar Program Course?'%>
+          <%= form.select :privilege, options_for_select(['No', 'cs61a', 'cs61b', 'cs61c', 'cs70']), {:prompt=>"Select Tutor Type"}, {class: 'form-control '} %>
         </div>
 
         <div class="form-group">
@@ -99,27 +112,12 @@
           <%= form.text_field :sid, class: 'form-control ', placeholder: 'eg. 12345678', :required => true,  pattern: "[0-9]+$", oninput: "this.setCustomValidity('')" ,oninvalid: "this.setCustomValidity('Numbers Only')"%>
         </div>
 
-        <div class="form-group horiz-form">
-          <label class="required" style="width: 100%;">Preferred Classes</label>
-          <%= fields_for :classes do |nc| %>
-            <div class="form-control" style="height:unset;">
-              <% @berkeley_classes.each do|bc| %> 
-                <div class="bc-container">
-                  <%= nc.check_box bc, {}, true, false%>
-                  <label for=<%="classes_" + bc%>> 
-                    <%= bc %> 
-                  </label>
-                </div>
-              <% end %>
-            </div>
-          <% end %>
-        </div>
       </div>
     </div>
 
     <div style="width: 100%;">
-        <%= link_to 'Back', new_tutor_session_path, class: 'btn btn-secondary text-light'%>
-        <button type="submit" class="btn btn-success float-right">Create New Tutor</button>
+        <%= link_to 'Back', new_tutee_session_path, class: 'btn btn-secondary text-light'%>
+        <button type="submit" class="btn btn-success float-right">Create New Student</button>
     </div>
   </div>
 <%end %>
