--- a/app/views/layouts/tutee_layout.html.haml
+++ b/app/views/layouts/tutee_layout.html.haml
@@ -48,7 +48,7 @@
           %a.nav-link{:href => new_tutee_request_path(@tutee)}
             %span.glyphicon.glyphicon-pencil
             %span Request
-        %li.nav-item.post{:class => "#{'active' if current_page?(tutee_meeting_path(@tutee))}"}
+        %li.nav-item.post{:class => "#{'active' if current_page?(tutee_meeting_path(@tutee,1))}"}
           %a.nav-link{:href => tutee_meeting_path(@tutee, 1)}
             %span.glyphicon.glyphicon-map-marker
             %span Meeting
