--- a/app/views/tutees/show.html.haml
+++ b/app/views/tutees/show.html.haml
@@ -13,7 +13,13 @@
         .card-body
           .card-body-icon
             %i.glyphicon.glyphicon-map-marker
-          .mr-5 Set Up Next Meeting!
+          .mr-5 
+          -if not @meeting.nil? and @meeting.setTime.nil?
+            = "Set Up Next Meeting"
+          -elsif @meeting.nil? or @meeting.isExpired
+            = "No Pending Meetings"
+          -else
+            = "Next Meeting " + @meeting.setTime.strftime("%a %d at %H:%M")
         %a.card-footer.text-white.clearfix.small.z-1{:href => tutee_meeting_path(@tutee, 1)}
           %span.float-left View Details
           %span.float-right
