--- a/app/views/tutors/find_students.html.erb
+++ b/app/views/tutors/find_students.html.erb
@@ -44,6 +44,7 @@
                             <% @true_classes.each_with_index do |true_class, index| %>
                                 <a class="nav-item nav-link<% if (index == 0) %> active<% end %>" 
                                     id="<%=true_class %>-tab"
+                                    name="<%=true_class %>-tab"
                                     data-toggle="tab" 
                                     href="#<%=true_class %>-tab" 
                                     id="<%=true_class %>-tab" 
